Исправлено обновление testCase